--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       a. La coupe d'argent : Elle appartient a ceux qui vivent dans l'ombre.
       b. La coupe d'or : Elle appartient a ceux qui croient en la lumiere.
       c. La coupe de plomb : Elle appartient a ceux qui n'ont rien à perdre.
-    <p>Entrez le mot secret pour poursuivre l’aventure :</p>
+    <p>Entrez la réponse qui vous correspond le plus pour poursuivre l’aventure :</p>
     <input type="password" id="mdpInput" placeholder="Mot secret">
     <button onclick="checkMDP()">Entrer</button>
     <p class="error" id="errorMsg">Mot secret incorrect, réessayez.</p>
