--- a/index.html
+++ b/index.html
@@ -62,11 +62,13 @@
   <div class="box">
     <p>« Les ombres veillent sur ceux qui osent. »</p>
     <p>Une salle richement decoree vous ouvre ses portes... Au fond de celle-ci : un banquet.</p>
-      <p>Vous arrivez a son niveau, devant trois verres.</p>
+      <p>Vous arrivez a son niveau, devant vous trois verres.</p>
 
      <p>a. La coupe d'argent : Elle appartient a ceux qui vivent dans l'ombre.</p>
      <p>b. La coupe d'or : Elle appartient a ceux qui croient en la lumiere.</p>
       <p>c. La coupe de plomb : Elle appartient a ceux qui n'ont rien à perdre.</p>
+
+     <p> Une seule coupe permet de franchir cette étape. </p>
 
     <p>Entrez la réponse qui vous correspond le plus pour poursuivre l’aventure :</p>
     <input type="password" id="mdpInput" placeholder="Mot secret">
