--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <script>
     function checkMDP() {
       const input = document.getElementById('mdpInput').value.trim().toUpperCase();
-      const correct = 'c'; // ton mot secret
+      const correct = 'c'; 
       const error = document.getElementById('errorMsg');
       
       if(input === correct) {
