--- a/indice.html
+++ b/indice.html
@@ -83,7 +83,7 @@
 
 <p>“Dans chaque réunion, trois hommes parlent. L’un dit la vérité, l’autre ment, le dernier se tait.
 Le silence protège, le mensonge condamne, mais seule la vérité ouvre la porte.Qui choisis-tu de suivre ?”</p>
-    <p>Entrez le mot de passe pour continuer l’aventure :</p>
+    <p>Entrez votre réponse pour continuer l’aventure :</p>
 
     <input type="text" id="mdp" placeholder="Mot de passe">
     <button onclick="verifMdp()">Entrer</button>
