--- a/indice.html
+++ b/indice.html
@@ -79,10 +79,10 @@
 
   <body>
     <h1>ANEMOIA</h1>
-    <p>Une note froissée est posée sur la table. On y lit :
+    <p>Une note froissee est posee sur la table. On y lit :
 
-<p>“Dans chaque réunion, trois hommes parlent. L’un dit la vérité, l’autre ment, le dernier se tait.
-Le silence protège, le mensonge condamne, mais seule la vérité ouvre la porte.Qui choisis-tu de suivre ?”</p>
+<p>“Dans chaque reunion, trois hommes parlent. L’un dit la verite, l’autre ment, le dernier se tait.
+Le silence protege, le mensonge condamne, mais seule la verite ouvre la porte.Qui choisis-tu de suivre ?”</p>
     <p>Entrez votre réponse pour continuer l’aventure :</p>
 
     <input type="text" id="mdp" placeholder="Mot de passe">
